# jpdc23-artifact

./: README.md  benchmark.sh  kick-the-tires.sh  run-all.sh
benchmark/: benchmark.py  benchmark.sh  benchmark.yml  benchmarking.py  input_generator.py  preprocess.py  shared.py  validation.py
data-plots/data/ada/n_to_m/: multimat-both-multirow-both.csv  multimat-both-work-distribution.csv  multimat-both.csv
data-plots/data/ada/n_to_m_saturated/: multimat-both-multirow-both.csv  original.csv
data-plots/data/ada/n_to_mn/: multimat-right-multirow-both.csv  multimat-right-work-distribution.csv  original.csv
data-plots/data/ada/n_to_mn_saturated/: fft.csv  multimat-right-multirow-both.csv  multimat-right.csv  original.csv
data-plots/data/ada/one_to_many/: multimat-right-multirow-both.csv  original.csv  warp-per-shift-shared-memory.csv
data-plots/data/ada/one_to_many_saturated/: fft.csv  multimat-right-multirow-both.csv  multimat-right.csv  original.csv
data-plots/data/ada/one_to_one/: block-per-shift.csv  multirow_both.csv
data-plots/data/ada/one_to_one_saturated/: multirow_both.csv
data-plots/data/ampere/n_to_m/: fft.csv  multimat-both.csv  original.csv
data-plots/data/ampere/n_to_m_saturated/: original.csv
data-plots/data/ampere/n_to_mn/: multimat-right-work-distribution.csv  original.csv
data-plots/data/ampere/n_to_mn_saturated/: fft.csv  multimat-right-multirow-both.csv
data-plots/data/ampere/one_to_many/: multimat-right-multirow-both.csv  multimat-right-work-distribution.csv  multimat-right.csv  original.csv  warp-per-shift-shared-memory.csv
data-plots/data/ampere/one_to_many_saturated/: multimat-right-multirow-both.csv
data-plots/data/ampere/one_to_one/: fft.csv  warp-per-shift-shared-memory.csv  warp-per-shift-simple-indexing.csv  warp-per-shift.csv
data-plots/data/ampere/one_to_one_saturated/: basic.csv  multirow_both.csv
data-plots/data/volta/n_to_m/: fft.csv  multimat-both-multirow-both.csv
data-plots/data/volta/n_to_m_saturated/: fft.csv
data-plots/data/volta/n_to_mn/: original.csv
data-plots/data/volta/n_to_mn_saturated/: multimat-right-multirow-both.csv  multimat-right.csv
data-plots/data/volta/one_to_many/: fft.csv  multimat-right-work-distribution.csv  original.csv  warp-per-shift-shared-memory.csv
data-plots/data/volta/one_to_one/: original.csv  warp-per-shift-shared-memory.csv  warp-per-shift-work-distribution.csv  warp-per-shift.csv
n-to-m/: CMakeLists.txt
n-to-m/src/: kernel_args.hpp  one_to_many.hpp
one-to-many/: CMakeLists.txt
one-to-many/src/: kernels.cuh  n_to_m.hpp  naive_shuffle_multimat_right.cu  naive_shuffle_multirow_right.cu  naive_warp_per_shift.cu  stopwatch.hpp  warp_size.hpp
one-to-one/: CMakeLists.txt
one-to-one-s/src/: naive_shuffle.cu  naive_shuffle_multirow_both_local_mem.cu  naive_shuffle_n_to_m_multimat_both_local_mem.cu  naive_shuffle_n_to_m_multirow_both_multimat_both.cu  shared_mem.cuh
one-to-one/src/: host_helpers.hpp  naive_original.cu  one_to_one.hpp
plots/: plot_fast.R  plot_n_to_mn.R  plot_one_to_many.R  plot_one_to_one.R  plots_n_to_m.R  plots_n_to_mn.R  plots_one_to_many.R  plots_one_to_one.R
presented-results/data/ada/n_to_m/: fft.csv  original.csv
presented-results/data/ada/n_to_mn/: fft.csv  multimat-right.csv
presented-results/data/ada/one_to_many/: fft.csv  multimat-right-work-distribution.csv  multimat-right.csv
presented-results/data/ada/one_to_one/: basic.csv  fft.csv  warp-per-shift-shared-memory.csv  warp-per-shift.csv
presented-results/data/ampere/n_to_m_saturated/: multimat-both.csv
presented-results/data/ampere/n_to_mn/: multimat-right-multirow-both.csv
presented-results/data/ampere/n_to_mn_saturated/: multimat-right.csv  original.csv
presented-results/data/ampere/one_to_many/: fft.csv
presented-results/data/ampere/one_to_many_saturated/: original.csv
presented-results/data/ampere/one_to_one/: basic.csv  work_distribution.csv
presented-results/data/volta/n_to_m/: original.csv
presented-results/data/volta/n_to_m_saturated/: multimat-both-multirow-both.csv  original.csv
presented-results/data/volta/n_to_mn/: fft.csv
presented-results/data/volta/n_to_mn_saturated/: fft.csv  original.csv
presented-results/data/volta/one_to_many/: multimat-right-multirow-both.csv
presented-results/data/volta/one_to_many_saturated/: fft.csv  multimat-right-multirow-both.csv  multimat-right.csv
presented-results/data/volta/one_to_one/: block-per-shift.csv  fft.csv
presented-results/data/volta/one_to_one_saturated/: basic.csv  multirow_both.csv
repo/: build-fast.sh  build.sh
repo/cross-corr/: CMakeLists.txt
repo/cross-corr/src/: README.md  argument_error.cpp  argument_error.hpp  bound_checked_loads.cuh  csv.hpp  cuda_helpers.cuh  fft_alg.hpp  fft_helpers.hpp  kernel_args.cpp  main.cpp  n_to_mn.hpp  naive_block_per_shift.cu  naive_shuffle_multirow_both.cu  naive_shuffle_multirow_right_multimat_right.cu  naive_shuffle_n_to_m_multimat_both.cu  naive_warp_per_shift_shared_mem.cu  row_distribution.cuh  run_args.hpp  scatter.cu  types.cuh
repo/one-to-one-s/: CMakeLists.txt  README.md
repo/one-to-one-s/src/: allocator.cuh  clamps.cuh  cross_corr.hpp  hadamard.cu  matrix.cuh  matrix.hpp  naive_shuffle_multirow_both.cu  naive_shuffle_one_to_many_multirow_both_multimat_right.cu  one_to_one.hpp  row_distribution.cpp  run_args.cpp  simple_logger.hpp  types.cuh  validate.hpp
results/data/ada/n_to_m_saturated/: fft.csv  multimat-both.csv
results/data/ada/one_to_one/: original.csv  warp-per-shift-simple-indexing.csv  warp-per-shift-work-distribution.csv  work_distribution.csv
results/data/ada/one_to_one_saturated/: basic.csv
results/data/ampere/n_to_m/: multimat-both-multirow-both.csv  multimat-both-work-distribution.csv
results/data/ampere/n_to_m_saturated/: fft.csv  multimat-both-multirow-both.csv
results/data/ampere/n_to_mn/: fft.csv  multimat-right.csv
results/data/ampere/one_to_many_saturated/: fft.csv  multimat-right.csv
results/data/ampere/one_to_one/: block-per-shift.csv  multirow_both.csv  original.csv  warp-per-shift-work-distribution.csv
(+12 files in other folders)
